<resources>

    <string name="app_label">Events</string>
    <string name="create_label">Create</string>
    <string name="edit_label">Edit</string>
    <string name="hello_world">Hello World</string>

    <string name="action_add">Add</string>
    <string name="action_check">OK</string>

    <string name="reset_success">Events reset</string>
    <string name="reset_error">Error while retrieving default events</string>
    <string name="check_error">Please fill mandatory fields Title and Date</string>

    <string name="row_title_placeholder">Turing birthday</string>
    <string name="row_date_placeholder">06/23/1912</string>
    <string name="row_place_placeholder">London</string>

    <string name="detail_label_title">Title</string>
    <string name="detail_label_date">Date</string>
    <string name="detail_label_place">Place</string>

</resources>
